--- a/src/main/webapp/style/graphics.css
+++ b/src/main/webapp/style/graphics.css
@@ -239,12 +239,46 @@ img.arrows:hover{
     opacity: 1;
 }
 
+select.validityPeriod{
+    text-align-last: center;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 14px;
+    color: #273F3F;
+
+    border-radius: 10px;
+    border: 1px solid #273F3F;
+
+    width: 50%;
+    height: 40px;
+
+    padding: 0 15px;
+
+    box-shadow:
+            0 2px 5px 0 rgba(0,0,0,0.16),
+            0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+option.validityPeriod{
+    position: absolute;
+    background-color: #B4CFCF;
+    color: #273F3F;
+    border-bottom: 1px solid #273F3F;
+}
+
+option.validityPeriod:hover{
+    background-color: #273F3F;
+    color: #B4CFCF;
+}
+
+/*
 div.selectValidityPeriod select{
     display: none;
+    position: center;
 }
 
 .select-selected{
-    text-align: center;
+    position: center;
     width: 75%;
     border-radius: 10px;
     background-color: #3F4964;
@@ -268,12 +302,12 @@ div.selectValidityPeriod select{
     height: 0;
     border: 6px solid transparent;
     border-color: #fff transparent transparent transparent;
-}*/
+}
 
 /*.select-selected.select-arrow-active:after{
     border-color: transparent transparent #fff transparent;
     top: 7px;
-}*/
+}
 
 .select-items div{
     color: #3F4964;
@@ -297,5 +331,7 @@ div.selectValidityPeriod select{
      letter-spacing: 3px;
      background-color: rgba(63,73,100,0.1);
      color: #F2F4F7;
- }
+ }*/
+
+
 
